[package]
name = "backend_new"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7.2", features = [
    "macros",
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
    "tls-rustls",
] }
axum = "0.6.20"
jsonwebtoken = "9"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
anyhow = "1.0.75"
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }
argon2 = { version = "0.5.2", features = ["std"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
